# bierdeckel

./: .gitignore  README.md  bier.bak  bier.kicad_sym  bierdeckel.csv  bierdeckel.kicad_pcb  bierdeckel.kicad_prl  bierdeckel.kicad_pro  bierdeckel.kicad_sch  bierdeckel.xml  bierdeckel_frosch.kicad_pcb  bierdeckel_frosch.kicad_prl  bierdeckel_frosch.kicad_pro  bierdeckel_rund.kicad_pcb  bierdeckel_rund.kicad_prl  bierdeckel_rund.kicad_pro  bierdeckel_rund.kicad_sch  energy.ods  fp-info-cache  leds.kicad_sch  mcus.kicad_sch  power.kicad_sch  pressure.kicad_sch
.github/workflows/: drc.yml  tag_release.yml
bier.pretty/: LPS3015-222MRC.kicad_mod  Texas_S-PVSON-N10_ThermalVias.kicad_mod  WSON-8-1EP_2x2mm_P0.5mm_EP0.9x1.6mm_ThermalVias.kicad_mod  pogo_receptor.kicad_mod  ws2812B_2020_flipped.kicad_mod
bom/: ibom.html
calculations/: LICENSE  wireless_charging_components.wxmx
code/beercoaster/: .gitignore  Cargo.toml  build.rs  commands  rust-toolchain.toml  sdkconfig.defaults
code/beercoaster/src/: main.rs
code/bt_flasher/: Cargo.toml
code/bt_flasher/src/: main.rs
code/deep_sleep_client/: Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
code/deep_sleep_client/.cargo/: config.toml
code/deep_sleep_client/src/: main.rs
code/flasher_gui/: Cargo.toml  build.rs
code/flasher_gui/src/: bt_util.rs  main.rs
code/led_deep_sleep/: led_deep_sleep.ino
code/ota-flasher/: main.py
code/ota-updating-test/: Cargo.toml  commands  rust-toolchain.toml
code/ota-updating-test/.cargo/: config.toml
code/ota-updating-test/src/: led_animation.rs  main.rs
mechanical/: CHANGES.txt  bierdeckel_base.FCStd  bierdeckel_foot.FCStd
pcb_design/: CI.kibot.yaml  bier.kicad_sym  bierdeckel.kicad_pcb  bierdeckel.kicad_prl  bierdeckel.kicad_pro  bierdeckel.kicad_sch  fp-info-cache  fp-lib-table  leds.kicad_sch  power.kicad_sch  pressure.kicad_sch  sym-lib-table
pcb_design/3d_models/: HSFPAR004A.stp
pcb_design/bier.pretty/: HSFPAR004A.kicad_mod  INA317IDGKR_SOP65P490X110-8N.kicad_mod  LED_WS2812B-2020_PLCC4_2.0x2.0mm.kicad_mod  LPS3015-222MRC.kicad_mod  Texas_S-PVSON-N10_ThermalVias.kicad_mod  WSON-8-1EP_2x2mm_P0.5mm_EP0.9x1.6mm_ThermalVias.kicad_mod  pogo_receptor.kicad_mod  super_cap.kicad_mod
pcb_design/bom/: ibom.html
production/bierdeckel_2024-02-23_23-29-26/: bom.csv  netlist.ipc  positions.csv
production/bierdeckel_2024-02-23_23-53-19/: bom.csv  designators.csv
production/bierdeckel_2024-02-24_00-07-23/: bom.csv  netlist.ipc
production/bierdeckel_2024-02-24_12-08-04/: bom.csv  designators.csv  netlist.ipc  positions.csv
