[package]
name = "combo_box"
version = "0.1.0"
authors = ["Joao Freitas <jhff.15@gmail.com>"]
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
iced = {version="0.14.0", features = ["tokio"]}
rfd = "0.17.2"

num-derive = "0.4.2"
num-traits = "0.2.19"

btleplug = {version = "^0.11.6"}
rand = "*"
tokio = { version = "^1", features = ["full"] }
uuid = "*"
futures = "0.3.31"

[build-dependencies]
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }