[package]
name = "ota-updating-test"
version = "0.1.0"
authors = ["Stefan Riesenberger <stefan.riesenberger@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
resolver = "2"
rust-version = "1.84"

[package.metadata.espflash]
partition_table = "partitions.csv"

[[bin]]
name = "ota-updating-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section"] # esp-idf-svc/embassy-time-driver

[dependencies]
log = { version = "0.4", default-features = false }
embedded-hal = {version = "1.0.0"}
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-hal = {version = "0.45.2"}
esp-idf-sys = {version = "0.36.1"}

smart-leds = "0.4.0"
smart-leds-trait = { version = "0.3", optional = true }
ws2812-esp32-rmt-driver = { version = "0.12", features = ["smart-leds-trait"] }

esp32-nimble = "0.11.1"
esp-ota = { version = "0.2.2" }
anyhow = "1.0.95"

num-derive = "0.4.2"
num-traits = "0.2.19"

single_value_channel = "1.2.2"

[build-dependencies]
embuild = "0.33.1"
anyhow = "1"
